# Bazel-test

./: MODULE.bazel  README.md  bazel-Bazel-test  bazel-bin  bazel-out  bazel-testlogs
Third_Party_Deps/: BUILD.bazel  requirements_lock_3_11.txt
projects/: .gitignore  readme.md
projects/PythonCalculator/: BUILD.bazel  Calculator.py  Calculator_test.py
projects/calculator/: BUILD.bazel  calculator_test.py
projects/python-app/: BUILD.bazel  main.py
third_party_deps/: requirements_lock.txt
